Refactor to better support role/profile pattern.
  This commit results in an API breaking refactor that affects
  the subclasses of this module, anyone that previously used this module
  by simply including Class['razor'] are unaffected and their API
  remains intact.  The subclass API changes because of class and
  variable name changes.  These changes are being made so that this module
  better fits into the emerging standard of the role/profile pattern.

  Previous to this it was not possible to use the subclasses that
  make up what is an actual razor-server to construct a proper profile.
  The subclasses were more tightly coupled and took to much liberty in the
  satisfaction of their dependencies.

--- a/templates/install-zip.sh.erb
+++ b/templates/install-zip.sh.erb
@@ -1,12 +1,12 @@
 #!/bin/sh
 set -ex
 
-tmpdir="$(dirname "<%= @dest %>")/razor-$$"          # not very secure
+tmpdir="$(dirname "<%= @install_dest %>")/razor-$$"          # not very secure
 trap "rm -rf '${tmpdir}'" exit
 mkdir -p "${tmpdir}"
 
 # OK, we need to download and unpack the archive into the destination...
-curl -Lo "${tmpdir}"/scratch.zip "<%= @url %>"
+curl -Lo "${tmpdir}"/scratch.zip "<%= @pkg_url %>"
 
 # Now, unpack it in the same location.
 unzip -d "${tmpdir}" "${tmpdir}"/scratch.zip
@@ -14,9 +14,9 @@ rm -rf "${tmpdir}"/scratch.zip
 
 # Finally, move that into place overwriting the destination files, but
 # avoiding destroying additional files.  This helps with upgrades...
-mkdir -p "<%= @dest %>"
-if ! tar cC "${tmpdir}/<%= @root %>" . | tar xC "<%= @dest %>"; then
-    rm -rf "<%= @dest %>"
+mkdir -p "<%= @install_dest %>"
+if ! tar cC "${tmpdir}/<%= @unpack_root %>" . | tar xC "<%= @install_dest %>"; then
+    rm -rf "<%= @install_dest %>"
     exit 1
 fi
 
