--- a/templates/razor-server.init.erb
+++ b/templates/razor-server.init.erb
@@ -11,7 +11,7 @@ NAME="razor-server"
 WAIT=30 # seconds
 
 # Set defaults.
-TORQUEBOX_HOME="<%= @dest %>"
+TORQUEBOX_HOME="<%= @install_dest %>"
 JBOSS_HOME="${TORQUEBOX_HOME}/jboss"
 JRUBY_HOME="${TORQUEBOX_HOME}/jruby"
 export TORQUEBOX_HOME JBOSS_HOME JRUBY_HOME
